--- a/src/main/resources/static/root.html
+++ b/src/main/resources/static/root.html
@@ -8,71 +8,7 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
-	<style>
-		body {
-			background-color: #FFFFFF;
-		}
-
-		.header {
-			background-color: #FFFFFF;
-			color: black;
-			padding: 15px;
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			border-bottom: 1px solid #dee2e6;
-		}
-
-		.sidebar {
-			background-color: #FFFFFF;
-			color: #343a40;
-			min-height: 100vh;
-			padding: 15px;
-		}
-
-		.sidebar .nav-link {
-			color: #343a40;
-		}
-
-		.sidebar .nav-link.active {
-			background-color: #DAEAE8;
-		}
-
-		.content {
-			padding: 15px;
-			background-color: #f8f9fa;
-			border-left: 1px solid #dee2e6;
-		}
-
-		.pagination .page-link {
-			color: #007bff;
-		}
-
-		.pagination .page-item.active .page-link {
-			background-color: #007bff;
-			border-color: #007bff;
-		}
-
-		.form-group {
-            display: flex;
-            align-items: center;
-            margin-bottom: 10px;
-        }
-		
-        .form-group label {
-            margin-right: 10px;
-            white-space: nowrap;
-        }
-        .form-group select, .form-group input {
-            flex: 1;
-        }
-
-		@media (max-width: 992px) {
-			.sidebar {
-				min-height: auto; /* 移除min-height */
-			}
-		}
-	</style>
+	<link href="./css/common.css" rel="stylesheet">
 </head>
 
 <body>
