--- a/src/main/resources/static/student.html
+++ b/src/main/resources/static/student.html
@@ -1,10 +1,90 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Student</title>
+	<meta charset="UTF-8">
+	<title>學生成績管理系統</title>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
+	<link href="./css/common.css" rel="stylesheet">
 </head>
 <body>
-	<h1>學生</h1>
+		<!-- header -->
+		<div class="header">
+			<div>
+				<h1><i class="fas fa-university"></i>大學選課系統</h1>
+			</div>
+			<div>
+				<span style="font-size: 24px;"><i class="fas fa-user-cog"></i> 學生</span>
+			</div>
+		</div>
+		<!-- main -->
+		<div class="container-fluid">
+			<div class="row">
+				<nav class="col-12 col-lg-2 order-2 order-lg-2 sidebar">
+					<div class="position-sticky">
+						<ul class="nav flex-lg-column flex-row">
+							<li class="nav-item">
+								<a class="nav-link active" href="#" link-page="student_front_page"><i class="fas fa-home"></i> 系統首頁</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#" link-page="root_course"><i class="fas fa-calendar-alt"></i> 課表查詢</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#" link-page="root_course"><i class="fas fa-graduation-cap"></i> 成績查詢</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#" link-page="root_course"><i class="fas fa-chalkboard-teacher"></i> 選課系統</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#" onclick="logout()"><i class="fas fa-sign-out-alt"></i> 退出系統</a>
+							</li>
+						</ul>
+					</div>
+				</nav>
+
+				<main id="content" class="col-12 col-lg-10 order-2 order-lg-2 content">
+				</main>
+			</div>
+		</div>
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+		<script src="./js/common.js"></script>
+		<script>
+			$(document).ready(function() {
+				var token = localStorage.getItem("token");
+				if (token == null) {
+					window.location.href = '/index.html';
+				}
+				renderHtml('content', 'student/student_front_page.html');
+				sideBarLinkage();
+			});
+
+			// sidebar 連動
+			const sideBarLinkage = () => {
+				var navLink = document.getElementsByClassName('nav-link');
+				for (var i = 0; i < navLink.length; i++) {
+					navLink[i].addEventListener('click', (e) => {
+						// 確保點擊的是 nav-link
+						var clickedElement = e.target;
+						if (!clickedElement.classList.contains('nav-link')) {
+							clickedElement = clickedElement.closest('.nav-link');
+						}
+
+						var page = clickedElement.getAttribute('link-page');
+						if (page) {
+							renderHtml('content', `student/${page}.html`);
+						}
+						// 切換 active 屬性
+						var activeElement = document.querySelector('.nav-link.active');
+						if (activeElement) {
+							activeElement.classList.remove('active');
+						}
+						clickedElement.classList.add('active');
+
+					})
+				}
+			}
+		</script>
 </body>
 </html>
