--- a/src/main/resources/static/teacher/teacher_course.html
+++ b/src/main/resources/static/teacher/teacher_course.html
@@ -1,7 +1,7 @@
 <div class="d-flex align-items-center mb-3 p-3 border border-opacity-100 bg-white rounded">
     <label for="year">年份:</label>
     <select class="form-select w-25" name="year" id="year">
-        <option value="110">110</option>
+        <option value="110" selected>110</option>
         <option value="111">111</option>
         <option value="112">112</option>
         <option value="113">113</option>
@@ -10,10 +10,10 @@
 
 <div class="p-3 mb-3 border border-opacity-100 bg-white rounded">
     <table class="table table-striped table-hover">
-        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#courseModal">新增</button>
         <thead>
             <tr>
                 <th>年份</th>
+                <th>學期</th>
                 <th>科系</th>
                 <th>課名</th>
                 <th>課程資訊</th>
@@ -39,20 +39,14 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="courseModalLabel">課程訊息</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <form id="courseForm" action="">
-                <input type="hidden" name="saveFunction" id="saveFunction" value="insert">
                 <input type="hidden" name="courseIndex" id="courseIndex">
                 <div class="modal-body">
                     <div class="form-group">
                         <label for="depId">科&#12288;&#12288;系:</label>
-                        <select id="depId" name="depId" class="form-select" aria-label="Default select example" readonly>
+                        <select id="depId" name="depId" class="form-select" aria-label="Default select example" disabled>
                         </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="courseId">課程代號:</label>
-                        <input type="text" id="courseId" name="courseId" class="form-control" placeholder="請輸入課程代號" readonly>
                     </div>
                     <div class="form-group">
                         <label for="courseName">課程名稱:</label>
@@ -61,7 +55,7 @@
                     <div class="form-group">
                         <label for="courseYear">課程年份:</label>
                         <input type="number" id="courseYear" name="courseYear" class="form-control" readonly>
-                        <select id="courseSemester" name="courseSemester" class="form-select" readonly>
+                        <select id="courseSemester" name="courseSemester" class="form-select" disabled>
                             <option selected value="1">上</option>
                             <option value="2">下</option>
                         </select>
@@ -81,13 +75,13 @@
 </div>
 
 <script>
-    //searchUser('studentBody', 'studentModal', 3);
+    findCourseByTeacherId();
     loadDepartment();
     $('#year').on('change', (e) => {
-        
+        findCourseByTeacherId();
     });
     $('#courseForm').on('submit', (e) => {
         e.preventDefault();
-        saveUser('courseForm', 'courseBody', 'courseModal');
+        saveCourse('courseForm', 'courseBody', 'courseModal');
     });
 </script>
