--- a/src/main/resources/static/root/root_course_info.html
+++ b/src/main/resources/static/root/root_course_info.html
@@ -10,7 +10,7 @@
     }
 </style>
 
-<div id="user-header" class="d-flex mb-3 p-3 border border-opacity-100 bg-white rounded ">
+<div id="user-header" class="d-flex mb-3 p-3 border border-opacity-100 bg-white rounded">
     <input name="classId" type="hidden">
     <div class="form-group">
         <select name="depId" class="form-select">
@@ -119,7 +119,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
-                    <button type="submit" class="btn btn-primary" onclick="saveCourseOfferings()">保存</button>
+                    <button type="button" class="btn btn-primary" onclick="saveCourseOfferings()">保存</button>
                 </div>
             </form>
         </div>
