--- a/src/main/resources/static/student/course_select.html
+++ b/src/main/resources/static/student/course_select.html
@@ -1,130 +1,180 @@
 <div class="d-flex mb-3 p-3 border border-opacity-100 bg-white rounded ">
-    選課系統
-    <input type="text" class="form-control w-50" placeholder="請輸入關鍵字查詢">
-    <div class="ms-2">
-        <button class="btn btn-success">查詢</button>
-        <button class="btn btn-primary">重置</button>
-    </div>
+    <select id="depId" name="depId" class="form-select" style="width: 150px;">
+    </select>
 </div>
 
 <div class="p-3 mb-3 border border-opacity-100 bg-white rounded">
-    <table class="table table-striped table-hover">
-        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#studentModal" onclick="insertUser('studentForm', 3)">新增</button>
-        <thead>
-            <tr>
-                <th>學號</th>
-                <th>姓名</th>
-                <th>科系</th>
-                <th>性別</th>
-                <th>生日</th>
-                <th>Email</th>
-                <th>手機</th>
-                <th>年級</th>
-                <th>班級</th>
-                <th>操作</th>
-            </tr>
-        </thead>
-        <tbody id="studentBody">
-        </tbody>
-    </table>
-</div>
-
-<div aria-label="Page navigation example" class="border border-opacity-100 bg-white rounded">
-    <div class="pagination p-3">
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <!-- 更多分頁按鈕 -->
-    </div>
-</div>
-
-<div class="modal fade" id="studentModal" tabindex="-1" aria-labelledby="studentModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="studentModalLabel">學生訊息</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    <div class="container">
+        <div class="row mt-5">
+            <div class="col-md-4">
+                <h2 class="text-center mb-4">可選課程</h2>
+                <ul id="availableCourses" class="list-group">
+                    <!-- 預設資料 -->
+                    <li class="list-group-item course-item" data-course="數學" data-time="1-1">數學 - 星期一 第一節</li>
+                    <li class="list-group-item course-item" data-course="英文" data-time="2-2">英文 - 星期二 第二節</li>
+                    <li class="list-group-item course-item" data-course="物理" data-time="3-3">物理 - 星期三 第三節</li>
+                    <li class="list-group-item course-item" data-course="化學" data-time="4-4">化學 - 星期四 第四節</li>
+                    <li class="list-group-item course-item" data-course="生物" data-time="5-5">生物 - 星期五 第五節</li>
+                </ul>
             </div>
-            <form id="studentForm" action="">
-                <input type="hidden" name="saveFunction" id="saveFunction" value="insert">
-                <input type="hidden" name="classId" id="classId">
-                <input type="hidden" name="permissionId" id="permissionId" value="3">
-                <div class="modal-body">
-                    <div class="form-group">
-                        <label for="userId">學&#12288;&#12288;號:</label>
-                        <input type="text" id="userId" name="userId" class="form-control" placeholder="請輸入學號" required>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="courseId">姓&#12288;&#12288;名:</label>
-                        <input type="text" id="userName" name="userName" class="form-control" placeholder="請輸入姓名" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="depId">科&#12288;&#12288;系:</label>
-                        <select id="depId" name="depId" class="form-select">
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label>性&#12288;&#12288;別:</label>
-                        <div>
-                            <input class="form-check-input" type="radio" name="sex" id="male" value="1" checked>
-                            <label class="form-check-label" for="male">男</label>
-                        </div>
-                        <div>
-                            <input class="form-check-input" type="radio" name="sex" id="female" value="2">
-                            <label class="form-check-label" for="female">女</label>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="birthDate">生&#12288;&#12288;日:</label>
-                        <input type="date" id="birthDate" name="birthDate" class="form-control" placeholder="請輸入生日" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">電子信箱:</label>
-                        <input type="email" id="email" name="email" class="form-control" placeholder="請輸入Email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="phone">手&#12288;&#12288;機:</label>
-                        <input type="text" id="phone" name="phone" class="form-control" placeholder="請輸入手機" required>
-                    </div>
-                    <div class="form-group">
-                        <label>班&#12288;&#12288;級:</label>
-                        <select id="classGrade" name="classGrade" class="form-select">
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                        </select>年
-                        <select id="className" name="className" class="form-select">
-                            <option value="甲">甲</option>
-                            <option value="乙">乙</option>
-                            <option value="丙">丙</option>
-                        </select>班
-                    </div>
-                    <div class="form-group">
-                        <label for="admissionDate">入學日期:</label>
-                        <input type="date" id="admissionDate" name="admissionDate" class="form-control" placeholder="請輸入入學日期" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="avatar">大頭貼:&#12288;</label>
-                        <input type="file" id="avatar" name="avatar" class="form-control" accept=".jpg, .png">
-                        <img id="avatarPreview" src="" alt="預覽圖片" style="max-width: 200px; max-height: 200px; margin-top: 10px; display: none;">
-                    </div>
+            <div class="col-md-4 d-flex flex-column justify-content-center align-items-center">
+                <button id="addCourse" class="btn btn-primary mb-2">加選 &gt;&gt;</button>
+                <button id="removeCourse" class="btn btn-danger mt-2">&lt;&lt; 退選</button>
+            </div>
+            <div class="col-md-4">
+                <h2 class="text-center mb-4">已選課程</h2>
+                <ul id="selectedCourses" class="list-group">
+                    <!-- 已選課程列表 -->
+                </ul>
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-md-12">
+                <div class="p-3 mb-3 border border-opacity-100 bg-white rounded">
+                    <h2 class="text-center mb-4">課表</h2>
+                    <table class="table table-bordered table-striped schedule-table text-center">
+                        <thead>
+                            <tr>
+                                <th></th>
+                                <th>星期一</th>
+                                <th>星期二</th>
+                                <th>星期三</th>
+                                <th>星期四</th>
+                                <th>星期五</th>
+                            </tr>
+                        </thead>
+                        <tbody id="scheduleBody">
+                            <tr>
+                                <th>08:00 - 08:50<br>第一節</th>
+                                <td data-time="1-1"></td>
+                                <td data-time="2-1"></td>
+                                <td data-time="3-1"></td>
+                                <td data-time="4-1"></td>
+                                <td data-time="5-1"></td>
+                            </tr>
+                            <tr>
+                                <th>09:00 - 09:50<br>第二節</th>
+                                <td data-time="1-2"></td>
+                                <td data-time="2-2"></td>
+                                <td data-time="3-2"></td>
+                                <td data-time="4-2"></td>
+                                <td data-time="5-2"></td>
+                            </tr>
+                            <tr>
+                                <th>10:00 - 10:50<br>第三節</th>
+                                <td data-time="1-3"></td>
+                                <td data-time="2-3"></td>
+                                <td data-time="3-3"></td>
+                                <td data-time="4-3"></td>
+                                <td data-time="5-3"></td>
+                            </tr>
+                            <tr>
+                                <th>11:00 - 11:50<br>第四節</th>
+                                <td data-time="1-4"></td>
+                                <td data-time="2-4"></td>
+                                <td data-time="3-4"></td>
+                                <td data-time="4-4"></td>
+                                <td data-time="5-4"></td>
+                            </tr>
+                            <tr>
+                                <th colspan="6" class="text-center bg-light">中午休息</th>
+                            </tr>
+                            <tr>
+                                <th>13:00 - 13:50<br>第五節</th>
+                                <td data-time="1-5"></td>
+                                <td data-time="2-5"></td>
+                                <td data-time="3-5"></td>
+                                <td data-time="4-5"></td>
+                                <td data-time="5-5"></td>
+                            </tr>
+                            <tr>
+                                <th>14:00 - 14:50<br>第六節</th>
+                                <td data-time="1-6"></td>
+                                <td data-time="2-6"></td>
+                                <td data-time="3-6"></td>
+                                <td data-time="4-6"></td>
+                                <td data-time="5-6"></td>
+                            </tr>
+                            <tr>
+                                <th>15:00 - 15:50<br>第七節</th>
+                                <td data-time="1-7"></td>
+                                <td data-time="2-7"></td>
+                                <td data-time="3-7"></td>
+                                <td data-time="4-7"></td>
+                                <td data-time="5-7"></td>
+                            </tr>
+                            <tr>
+                                <th>16:00 - 16:50<br>第八節</th>
+                                <td data-time="1-8"></td>
+                                <td data-time="2-8"></td>
+                                <td data-time="3-8"></td>
+                                <td data-time="4-8"></td>
+                                <td data-time="5-8"></td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
-                    <button type="submit" class="btn btn-primary">保存</button>
-                </div>
-            </form>
+            </div>
         </div>
     </div>
 </div>
 
 <script>
-    //searchUser('studentBody', 'studentModal', 3);
-    loadDepartment();
-    $('#studentForm').on('submit', (e) => {
-        e.preventDefault();
-        saveUser('studentForm', 'studentBody', 'studentModal');
+    $(document).ready(function() {
+        loadDepartment();
+        // 點擊課程項目時選中課程
+        $(document).on('click', '.course-item', function() {
+            $('.course-item').removeClass('active');
+            $(this).addClass('active');
+        });
+
+        // 加選課程
+        $('#addCourse').on('click', function() {
+            var selectedCourse = $('#availableCourses .active');
+            if (selectedCourse.length > 0) {
+                var course = selectedCourse.data('course');
+                var time = selectedCourse.data('time');
+                var cell = $('td[data-time="' + time + '"]');
+
+                if (cell.text() === "") {
+                    // 新增課程到課表
+                    cell.text(course);
+                    selectedCourse.removeClass('active').appendTo('#selectedCourses');
+                } else {
+                    alert('該時段已有課程');
+                }
+            } else {
+                alert('請選擇一門課程');
+            }
+        });
+
+        // 退選課程
+        $('#removeCourse').on('click', function() {
+            var selectedCourse = $('#selectedCourses .active');
+            if (selectedCourse.length > 0) {
+                var course = selectedCourse.data('course');
+                var time = selectedCourse.data('time');
+                var cell = $('td[data-time="' + time + '"]');
+
+                // 移除課表中的課程
+                cell.text("");
+                selectedCourse.removeClass('active').appendTo('#availableCourses');
+            } else {
+                alert('請選擇一門已選課程');
+            }
+        });
+
+        // 移除課表中的課程時更新已選課程列表
+        $('#scheduleBody td').on('click', function() {
+            var course = $(this).text();
+            if (course !== "") {
+                $(this).text("");
+                $('#selectedCourses .course-item').each(function() {
+                    if ($(this).data('course') === course) {
+                        $(this).removeClass('list-group-item-success').appendTo('#availableCourses');
+                    }
+                });
+            }
+        });
     });
 </script>
