--- a/src/main/resources/static/student/course_select.html
+++ b/src/main/resources/static/student/course_select.html
@@ -10,11 +10,6 @@
                 <h2 class="text-center mb-4">可選課程</h2>
                 <ul id="availableCourses" class="list-group">
                     <!-- 預設資料 -->
-                    <li class="list-group-item course-item" data-course="數學" data-time="1-1">數學 - 星期一 第一節</li>
-                    <li class="list-group-item course-item" data-course="英文" data-time="2-2">英文 - 星期二 第二節</li>
-                    <li class="list-group-item course-item" data-course="物理" data-time="3-3">物理 - 星期三 第三節</li>
-                    <li class="list-group-item course-item" data-course="化學" data-time="4-4">化學 - 星期四 第四節</li>
-                    <li class="list-group-item course-item" data-course="生物" data-time="5-5">生物 - 星期五 第五節</li>
                 </ul>
             </div>
             <div class="col-md-4 d-flex flex-column justify-content-center align-items-center">
@@ -46,70 +41,70 @@
                         <tbody id="scheduleBody">
                             <tr>
                                 <th>08:00 - 08:50<br>第一節</th>
-                                <td data-time="1-1"></td>
-                                <td data-time="2-1"></td>
-                                <td data-time="3-1"></td>
-                                <td data-time="4-1"></td>
-                                <td data-time="5-1"></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
                             </tr>
                             <tr>
                                 <th>09:00 - 09:50<br>第二節</th>
-                                <td data-time="1-2"></td>
-                                <td data-time="2-2"></td>
-                                <td data-time="3-2"></td>
-                                <td data-time="4-2"></td>
-                                <td data-time="5-2"></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
                             </tr>
                             <tr>
                                 <th>10:00 - 10:50<br>第三節</th>
-                                <td data-time="1-3"></td>
-                                <td data-time="2-3"></td>
-                                <td data-time="3-3"></td>
-                                <td data-time="4-3"></td>
-                                <td data-time="5-3"></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
                             </tr>
                             <tr>
                                 <th>11:00 - 11:50<br>第四節</th>
-                                <td data-time="1-4"></td>
-                                <td data-time="2-4"></td>
-                                <td data-time="3-4"></td>
-                                <td data-time="4-4"></td>
-                                <td data-time="5-4"></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
                             </tr>
                             <tr>
                                 <th colspan="6" class="text-center bg-light">中午休息</th>
                             </tr>
                             <tr>
                                 <th>13:00 - 13:50<br>第五節</th>
-                                <td data-time="1-5"></td>
-                                <td data-time="2-5"></td>
-                                <td data-time="3-5"></td>
-                                <td data-time="4-5"></td>
-                                <td data-time="5-5"></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
                             </tr>
                             <tr>
                                 <th>14:00 - 14:50<br>第六節</th>
-                                <td data-time="1-6"></td>
-                                <td data-time="2-6"></td>
-                                <td data-time="3-6"></td>
-                                <td data-time="4-6"></td>
-                                <td data-time="5-6"></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
                             </tr>
                             <tr>
                                 <th>15:00 - 15:50<br>第七節</th>
-                                <td data-time="1-7"></td>
-                                <td data-time="2-7"></td>
-                                <td data-time="3-7"></td>
-                                <td data-time="4-7"></td>
-                                <td data-time="5-7"></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
                             </tr>
                             <tr>
                                 <th>16:00 - 16:50<br>第八節</th>
-                                <td data-time="1-8"></td>
-                                <td data-time="2-8"></td>
-                                <td data-time="3-8"></td>
-                                <td data-time="4-8"></td>
-                                <td data-time="5-8"></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
                             </tr>
                         </tbody>
                     </table>
@@ -120,12 +115,20 @@
 </div>
 
 <script>
-    $(document).ready(function() {
-        loadDepartment();
+    $(document).ready(async function() {
+        await loadDepartment();
+        await findSchedule();
+        findAllCourse();
+        
         // 點擊課程項目時選中課程
         $(document).on('click', '.course-item', function() {
             $('.course-item').removeClass('active');
             $(this).addClass('active');
+        });
+
+        // 下拉選單
+        $('#depId').on('change', function() {
+            findAllCourse();
         });
 
         // 加選課程
@@ -133,16 +136,40 @@
             var selectedCourse = $('#availableCourses .active');
             if (selectedCourse.length > 0) {
                 var course = selectedCourse.data('course');
-                var time = selectedCourse.data('time');
-                var cell = $('td[data-time="' + time + '"]');
-
-                if (cell.text() === "") {
-                    // 新增課程到課表
-                    cell.text(course);
-                    selectedCourse.removeClass('active').appendTo('#selectedCourses');
-                } else {
-                    alert('該時段已有課程');
+                var courseOfWeek = course.courseOfWeek;
+                var courseStart = course.courseStart;
+                var courseEnd = course.courseEnd;
+                var courseName = course.courseName;
+                var column;
+                switch (courseOfWeek) {
+                    case 'Monday':
+                        column = 0;
+                        break;
+                    case 'Tuesday':
+                        column = 1;
+                        break;
+                    case 'Wednesday':
+                        column = 2;
+                        break;
+                    case 'Thursday':
+                        column = 3;
+                        break;
+                    case 'Friday':
+                        column = 4;
+                        break;
                 }
+
+                for (var i = courseStart; i <= courseEnd; i++) {
+                    var rowIndex = courseStart < 5 ? i-1 : i;
+                    var cell = $('#scheduleBody').find('tr').eq(rowIndex).find('td').eq(column);
+                    if (!cell.text() == '') {
+                        alert('該時段已有課程');
+                        return;
+                    }
+                    cell.html(courseName);
+                }
+
+                selectedCourse.removeClass('active').appendTo('#selectedCourses');
             } else {
                 alert('請選擇一門課程');
             }
@@ -153,28 +180,105 @@
             var selectedCourse = $('#selectedCourses .active');
             if (selectedCourse.length > 0) {
                 var course = selectedCourse.data('course');
-                var time = selectedCourse.data('time');
-                var cell = $('td[data-time="' + time + '"]');
+                var courseOfWeek = course.courseOfWeek;
+                var courseStart = course.courseStart;
+                var courseEnd = course.courseEnd;
+                var courseName = course.courseName;
+                var column;
+                switch (courseOfWeek) {
+                    case 'Monday':
+                        column = 0;
+                        break;
+                    case 'Tuesday':
+                        column = 1;
+                        break;
+                    case 'Wednesday':
+                        column = 2;
+                        break;
+                    case 'Thursday':
+                        column = 3;
+                        break;
+                    case 'Friday':
+                        column = 4;
+                        break;
+                }
 
-                // 移除課表中的課程
-                cell.text("");
+                for (var i = courseStart; i <= courseEnd; i++) {
+                    var rowIndex = courseStart < 5 ? i-1 : i;                    
+                    $('#scheduleBody').find('tr').eq(rowIndex).find('td').eq(column).html('');
+                }
+
                 selectedCourse.removeClass('active').appendTo('#availableCourses');
             } else {
                 alert('請選擇一門已選課程');
             }
         });
+    });
 
-        // 移除課表中的課程時更新已選課程列表
-        $('#scheduleBody td').on('click', function() {
-            var course = $(this).text();
-            if (course !== "") {
-                $(this).text("");
-                $('#selectedCourses .course-item').each(function() {
-                    if ($(this).data('course') === course) {
-                        $(this).removeClass('list-group-item-success').appendTo('#availableCourses');
-                    }
-                });
+    var findSchedule = async function() {
+        $('#scheduleBody').find('td').html('');
+        var param = {
+            'userId' : `${userId}`,
+            'courseYear' : '112',
+            'courseSemester' : '1'
+        }
+
+        var queryString = new URLSearchParams(param).toString();
+
+        const response = await fetch(`http://localhost:8080/course/findSchedule?${queryString}`, {
+            headers : {
+                'Authorization': `Bearer ${token}`,
             }
         });
-    });
+
+        const {state, message, data} = await response.json();
+        console.log(data);
+        data.forEach(obj => {
+            var column;
+            switch (obj.courseOfWeek) {
+                case 'Monday':
+                    column = 0;
+                    break;
+                case 'Tuesday':
+                    column = 1;
+                    break;
+                case 'Wednesday':
+                    column = 2;
+                    break;
+                case 'Thursday':
+                    column = 3;
+                    break;
+                case 'Friday':
+                    column = 4;
+                    break;
+            }
+
+            for (var i = obj.courseStart; i <= obj.courseEnd; i++) {
+                var rowIndex = obj.courseStart < 5 ? i-1 : i;
+                $('#scheduleBody').find('tr').eq(rowIndex).find('td').eq(column).html(obj.courseName);
+            }
+        });
+    }
+
+    var findAllCourse = async function() {
+        var param = {
+            courseRequired : '2',
+            depId : $('#depId').val()
+        }
+        var queryString = new URLSearchParams(param).toString();
+        const response = await fetch(`http://localhost:8080/course/findCourseOfferingInfo?${queryString}`, {
+            headers : {
+                'Authorization': `Bearer ${token}`
+            }
+        });
+        const {state, message, data} = await response.json();
+        console.log(data)
+        $('#availableCourses').html('');
+        data.forEach(obj => {
+            var jsonStr = JSON.stringify(obj);
+            $('#availableCourses').append(`
+                <li class="list-group-item course-item" data-course='${jsonStr}'">${obj.courseName} - ${obj.courseTime}</li>
+            `);
+        });        
+    }
 </script>
